# INV_anomaly_package

./: =0.1.0  ReadMe.txt  profile  requirements.txt
outlierdetection/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  callingGraph.dot  profile  pyproject.toml  pytest.ini
outlierdetection/docs/: Makefile  conf.py  example.ipynb  make.bat
outlierdetection/prof/: combined.prof  test_ARIMA_outlier.prof  test_clear_peak.prof  test_clear_peak_OSKAR.prof  test_scores_no_nan.prof  test_scores_test_data_empty.prof  test_scores_test_only_nans.prof  test_scores_training_has_too_few_points.prof  test_scores_training_nans.prof  test_scores_training_nans_and_test_nans.prof  test_scores_training_only_nans.prof  test_seasonal_ARIMA_outlier.prof  test_seasonal_outlier.prof  test_seasonal_outlier_with_cluster.prof
outlierdetection/source/: analyse_profile.rst
outlierdetection/src/outlierdetection/: __init__.py  multivariate.py  multivariate_IF.py  multivariate_MD.py  univariate.py  univariate_IF.py  univariate_PRE.py  univariate_PRO.py  univariate_STD.py  univariate_preprocessors.py
outlierdetection/tests/: functions_t_e_s_t.py  test_MOD_double_series.py  test_MOD_one_line_calls.py  test_UOD_single_series.py  test_one_line_calls.py  test_supplementary_functions_univariate.py
outlierdetection/tests/data/: ARIMA(1,0,0)_with_point_outliers_8_series.csv  ARIMA(1,0,0)_with_point_outliers_with_seasonality_1_series.csv  INV_ES_0_resistencia_daily_clear_peak_last.csv  OSKAR_data_with_clear_peak.csv  multivariate_data_input.json  two_time_series.csv  (+1 more)
(+5 files in other folders)
