[tool.poetry]
name = "outlierdetection"
version = "0.1.1"
description = "Ensemble of outlier detection algorithms with common API"
authors = ["Norbert Bodendorfer"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
